--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,14 @@
 .body{
     min-height: 100vh;
 }
+
+.button{
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    color: white;
+    cursor: pointer;
+    background: greenyellow;
+    display: block;
+    margin: 20px 0;
+}
