--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,20 @@
     display: block;
     margin: 20px 0;
 }
+
+.product{
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.product img{
+    max-width: 100%;
+
+}
+
+.group-product{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 30px;
+}
