--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Work Sans', sans-serif;
 }
 
-.body{
+
+#root{
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #0f0c45;
+    flex-direction: column;
+    align-items: center;
+}
+#section{
+    width: 100%;
+    max-width: 450px;
 }
 
-.button{
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    color: white;
-    cursor: pointer;
-    background: greenyellow;
+
+
+#section .add-form{
+    min-width: 100%;
+    padding: 50px 0;
+    display: flex;
+    justify-content: center;
+    background-color: violet;
+    border-radius: 6px;
+    padding: 30px;
+}
+form{
+    width: 100%;
+}
+.icon{
     display: block;
-    margin: 20px 0;
+    margin-bottom: 15px;
 }
 
-.product{
-    padding: 10px;
-    border-radius: 4px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-.product img{
-    max-width: 100%;
-
-}
-
-.group-product{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 30px;
+.button-group{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
 }
