--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 #section{
     width: 100%;
-    max-width: 450px;
+    max-width: 750px;
 }
 
 
@@ -44,4 +44,10 @@ form{
     display: flex;
     justify-content: flex-end;
     margin-top: 30px;
+}
+
+.list-expense{
+    border-radius: 4px;
+    background-color: #08071a;
+    padding: 15px;
 }
