--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,9 @@ code {
   border: none;
   margin-top: 80px;
   max-width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 200px;
 }
 
