--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-
-.button{
-  margin: 0 auto;
-  display: block;
-  padding: 10px;
-  border-radius: 4px;
-  cursor: pointer;
-  color: white;
-  background: gold;
-  border: none;
-  margin-top: 80px;
-  max-width: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 200px;
-}
-
-.upto-top{
-  position: fixed;
-  cursor: pointer;
-  bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: mymove 3s infinite;
-}
-
-@keyframes mymove {
-  0%   {transform: translateY(0)}
-  50%   {transform: translateY(-20px)}
-  100%  {transform: translateY(0)}
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Work Sans', sans-serif;
 }
