--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -29,3 +29,39 @@ header a {
     font-weight: bold ;
     color: red ;
 }
+
+.greet{
+    color: white;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.user-info{
+    position: relative;
+    display: inline-block;
+}
+.logout{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,50px) scale(0);
+    bottom: 0;
+    padding: 10px 20px;
+    border-radius: 4px;
+    color: white;
+    background-color: red;
+    cursor: pointer;
+    border: none;
+    transition-delay: 0.2s;
+    opacity: 0;
+    transform-origin: top;
+    transition: .2s linear;
+}
+
+.logout:hover{
+    transform: translate(-50%,50px) scale(1);
+    opacity: 1;
+}
+.greet:hover +  .logout{
+    transform: translate(-50%,50px) scale(1);
+    opacity: 1;
+}
