--- a/src/index.css
+++ b/src/index.css
@@ -7,41 +7,8 @@
     font-family: 'Work Sans', sans-serif;
 }
 
-input {
-    display: block;
-}
-
-form{
-    width: 100%;
-    max-width: 500px;
+.list-meal{
     margin: 0 auto;
-    margin-top: 60px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    padding: 20px;
-    border-radius: 5px;
-}
-
-form input{
-    border: none;
-    outline: none;
-    background-color: bisque;
-    padding: 10px;
-    border-radius: 5px;
-    margin: 10px 0;
-    width: 100%;
-}
-
-form button{
-    padding: 10px 20px;
-    width: 100%;
-    background-color: aqua;
-    color: white;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-a{
-    text-decoration: none;
-    color: blue;
+    width: fit-content;
+    margin-top: 70px;
 }
